<resources>
    <string name="app_name">CashBooster</string>
    <string name="title_activity_second">SecondActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="Login">Login</string>
    <string name="Sign_in">Sign In</string>
    <string name="Sign_up">Sign Up</string>
    <string name="Email">Email</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="top_up">Top up</string>
    <string name="cash_out">Cash Out</string>
    <string name="my_records">My Records</string>
    <string name="acknowledgement">Acknowledgement</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="more">More</string>
    <string name="password">Password</string>
    <string name="gameState">GameState</string>
    <string name="game_code">GameCode</string>
    <string name="amount">Amount</string>
    <string name="game_type">GameType</string>
    <string name="time_played">Time Played</string>
    <string name="id">ID</string>

</resources>