<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<item android:id="@+id/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="Settings"
        app:showAsAction="ifRoom"/>-->

    <item android:id="@+id/itemMore"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:title="@string/more"
        app:showAsAction="ifRoom">

        <menu>
            <item android:id="@+id/Home"
                android:title="Home"
                android:icon="@drawable/ic_baseline_home_24"
                tools:ignore="HardcodedText" />

            <item android:id="@+id/topUpAccount"
                android:title="@string/top_up"
                android:icon="@drawable/ic_baseline_account_top_up"/>

            <item android:id="@+id/cashOut"
                android:title="@string/cash_out"
                android:icon="@drawable/ic_baseline_credit_card_cash_out"/>

            <item android:id="@+id/checkMyRecords"
                android:title="@string/my_records"
                android:icon="@drawable/ic_baseline_assessment_data"/>

            <item android:id="@+id/acknowledgement"
                android:title="@string/acknowledgement"
                android:icon="@drawable/ic_baseline_thumbs_up_down_acknowledge"/>

            <item android:id="@+id/aboutCashBoosterApp"
                android:title="@string/about_us"
                android:icon="@drawable/ic_baseline_info_records"/>

            <item android:id="@+id/logout"
                android:title="@string/logout"
                android:icon="@drawable/ic_baseline_login_negative"/>
        </menu>

    </item>
</menu>